fix scrollbar and add tooltip styles css

--- a/test_fm/app/assets/stylesheets/application.css
+++ b/test_fm/app/assets/stylesheets/application.css
@@ -33,3 +33,33 @@ body{
     height:1%;
     margin: 0px auto;
 }
+
+/* Jqueryui для tooltip
+----------------------------------*/
+.ui-tooltip {
+	padding: 8px;
+	position: absolute;
+	z-index: 9999;
+	max-width: 300px;
+	-webkit-box-shadow: 0 0 5px #aaa;
+	box-shadow: 0 0 5px #aaa;
+    background: #ffffff
+}
+body .ui-tooltip {
+	border-width: 2px;
+}
+
+.ui-widget {
+	font-family: Verdana,Arial,sans-serif;
+	font-size: 1.1em;
+}
+.ui-widget .ui-widget {
+	font-size: 1em;
+}
+.ui-widget input,
+.ui-widget select,
+.ui-widget textarea,
+.ui-widget button {
+	font-family: Verdana,Arial,sans-serif;
+	font-size: 1em;
+}
